# time-tracking-cube

./: .gitmodules  README.md  flake.nix
docs/: main.md
firmware/: .clang-format  CMakeLists.txt  Cargo.toml  Embed.toml  README.md  memmap.ld
firmware/.cargo/: config.toml
firmware/assets/: config.json  config.toml
firmware/src/: config.rs  main.cpp  main.rs  sd_card.rs  time_tracking.rs
